--- a/client/src/Style/StyleLogin.css
+++ b/client/src/Style/StyleLogin.css
@@ -4,7 +4,7 @@
     max-width:525px;
     min-height:770px;
     position:relative;
-    background:url(https://centroevolvere.com.br/wp-content/uploads/2020/08/22.png) no-repeat center;
+    background:url(https://media.gettyimages.com/id/184838780/pt/foto/fundo-de-gotas-de-%C3%A1gua.jpg?s=2048x2048&w=gi&k=20&c=zaqOF3EBZD_REfdjmVXSiTZRBHFb0Q1QftMGmtpEpPY=) no-repeat center;
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
@@ -46,8 +46,8 @@
 }
 .login-html .sign-in:checked + .tab,
 .login-html .sign-up:checked + .tab{
-    color:#51389D;
-    border-color:#8D72E1;
+    color:#e91e2f;
+    border-color:#e91e2f;
 }
 .login-form{
     min-height:345px;
@@ -81,13 +81,13 @@
     font-size:12px;
 }
 .login-form .group .button{
-    background:#8D72E1;
+    background:#e91e2f;
     cursor: pointer;
     transition: 0.5s;
 }
 .login-form .group .button:hover{
-    background:#51389D;
-    border: 2px solid #222;        
+    background:#ff9800;
+    border: 1px solid #222;        
 }
 
 .login-form .group label .icon{
@@ -96,7 +96,7 @@
     border-radius:2px;
     position:relative;
     display:inline-block;
-    background:rgba(82, 55, 165, 0.404);
+    background:rgba(238, 96, 1, 0.521);
 }
 .login-form .group label .icon:before,
 .login-form .group label .icon:after{
@@ -122,7 +122,7 @@
     color:#000;
 }
 .login-form .group .check:checked + label .icon{
-    background:#51389D;
+    background:#e91e2f;
 }
 .login-form .group .check:checked + label .icon:before{
     transform:scale(1) rotate(45deg);
@@ -140,8 +140,12 @@
 .hr{
     height:2px;
     margin:60px 0 50px 0;
-    background:rgba(0, 0, 0, 0.438);
+    background:rgba(212, 4, 4, 0.493);
 }
 .foot-lnk{
     text-align:center;
 }
+
+.foot-lnk a {
+    color: red;
+  }
