--- a/client/src/Style/StyleLogin.css
+++ b/client/src/Style/StyleLogin.css
@@ -1,17 +1,18 @@
 .login-wrap{
-    width:100%;
-    margin:auto;
-    max-width:525px;
-    min-height:770px;
-    position:relative;
-    background:url(https://media.gettyimages.com/id/184838780/pt/foto/fundo-de-gotas-de-%C3%A1gua.jpg?s=2048x2048&w=gi&k=20&c=zaqOF3EBZD_REfdjmVXSiTZRBHFb0Q1QftMGmtpEpPY=) no-repeat center;
-    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+	width:100%;
+	margin:auto;
+	max-width:525px;
+	min-height:670px;
+	position:relative;
+	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
 }
 .login-html{
-    width:100%;
-    height:100%;
-    position:absolute;
-    padding:90px 70px 50px 70px;
+	width:100%;
+	height:100%;
+	position:absolute;
+	padding:90px 70px 50px 70px;
+	background:rgba(40,57,101,.9);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
@@ -34,6 +35,7 @@
 .login-form .group .button{
     text-transform:uppercase;
 }
+
 
 
 .login-html .tab{
