--- a/client/src/Style/StyleLogin.css
+++ b/client/src/Style/StyleLogin.css
@@ -12,7 +12,7 @@
 	height:100%;
 	position:absolute;
 	padding:90px 70px 50px 70px;
-	background:rgba(40,57,101,.9);
+	background:rgba(40, 57, 101, 0.685);
 }
 .login-html .sign-in-htm,
 .login-html .sign-up-htm{
