--- a/client/src/Style/StyleLogin.css
+++ b/client/src/Style/StyleLogin.css
@@ -154,6 +154,7 @@
 .foot-lnk{
     text-align:center;
     color: #fff;   
+    font-size: 15px;
 }
 
 .foot-lnk a {
@@ -166,5 +167,62 @@
   }
 
   /*Responsivo*/
+  @media (min-width: 1160px) {
+    .foot-lnk{
+        font-size: 20px;
+    }
 
-  
+}
+
+@media (min-width: 950px) {
+
+
+    .login-wrap {
+        background-size: 60% 100%;
+        font-size: 18px;
+        padding: 40px;
+    }
+
+    
+}
+
+@media (min-width: 768px) {
+    .login-wrap {
+        background-size: 70% 100%;
+        font-size: 16px;
+        padding: 30px;
+    }
+}
+
+@media (min-width: 600px) {
+    .login-wrap {
+        background-size: 80% 100%;
+        font-size: 14px;
+        padding: 20px;
+    }
+}
+
+@media (min-width: 414px) {
+    .login-wrap {
+        background-size: 100% 100%;
+        font-size: 12px;
+        padding: 10px;
+    }
+    .login-html .tab{
+        font-size:13px;
+    }
+
+
+
+
+
+
+}
+
+@media (min-width: 350px) {
+    .login-wrap {
+        background-size: 100% 100%;
+        font-size: 10px;
+        padding: 5px;
+    }
+}
