--- a/client/src/Style/StyleForm.css
+++ b/client/src/Style/StyleForm.css
@@ -37,7 +37,6 @@
   .form .group .label,
   .form .group .input {
     width: 100%;
-    color: #000;
     display: block;
   }
   
@@ -49,6 +48,11 @@
     background: rgba(211, 201, 201, 0.774);
   }
   
+  .group .input {
+    font-size: 16px;
+    color: #000;
+    font-weight: bold;
+  }
   .group .button,
   .group .label {
     text-transform: uppercase;
